# weather-rs

./: Cargo.toml
src/: main.rs  weather_format.rs
