[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
chrono-tz = "0.10.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_derive = "1.0.217"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
